--- a/app/src/main/res/layout/activity_reminder_setting.xml
+++ b/app/src/main/res/layout/activity_reminder_setting.xml
@@ -119,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="18 Hours"
-                    android:id="@+id/textView5"
+                    android:id="@+id/text_duration"
                     android:textSize="14dp"
                     android:gravity="center_vertical" />
             </LinearLayout>
@@ -158,7 +158,7 @@
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="13:00 Tuesday"
-                    android:id="@+id/textView7"
+                    android:id="@+id/text_reminder_end"
                     android:textSize="14sp"
                     android:gravity="center" />
             </LinearLayout>
@@ -181,7 +181,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Cancel"
-            android:id="@+id/button"
+            android:id="@+id/button_cancel2"
             android:layout_weight="1"
             android:layout_marginRight="4dp"
             android:layout_gravity="left"
