--- a/app/src/main/res/layout/fragment_fasting_length.xml
+++ b/app/src/main/res/layout/fragment_fasting_length.xml
@@ -20,127 +20,133 @@
         android:id="@+id/mainLinear"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_above="@+id/start_toggle">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="4"
-            android:id="@+id/linearLayout2"
-            android:baselineAligned="false"
-            android:layout_gravity="center">
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:layout_marginRight="4dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    android:text="@string/end_time"
-                    android:id="@+id/end_time"
-                    android:textStyle="bold"
-                    android:textSize="14sp"
-                    android:layout_above="@+id/current_time"
-                    android:layout_toLeftOf="@+id/current_time"
-                    android:layout_gravity="right"
-                    style= "?textTitle"
-                    android:layout_marginBottom="1dp"
-                    android:gravity="right" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Thursday"
-                    android:id="@+id/TXT_FUTURE"
-                    android:singleLine="false"
-                    android:layout_gravity="right"
-                    android:gravity="right"
-                    android:textSize="14sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:gravity="right">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="22:"
-                        android:id="@+id/dynamicHour"
-                        android:textSize="14sp"
-                        android:layout_above="@+id/seekVal"
-                        android:layout_toRightOf="@+id/clock_linear"
-                        style="?textRegular" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="00"
-                        android:id="@+id/endclock_text"
-                        android:textSize="14sp"
-                        android:layout_gravity="center_horizontal"
-                        style="?textRegular" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:id="@+id/linearLayout3"
-                android:layout_marginLeft="4dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/current_time"
-                    android:id="@+id/current_time"
-                    android:textStyle="bold"
-                    android:textSize="14sp"
-                    android:layout_alignTop="@+id/circularSeekBar2"
-                    android:layout_alignRight="@+id/circularSeekBar2"
-                    android:layout_alignEnd="@+id/circularSeekBar2"
-                    style="?textTitle"
-                    android:layout_marginBottom="1dp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Wednesday"
-                    android:id="@+id/TXT_TODAY"
-                    android:editable="false" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="21:00"
-                    android:id="@+id/clock_text"
-                    android:textSize="14sp"
-                    android:layout_below="@+id/current_time"
-                    android:layout_toRightOf="@+id/end_time"
-                   style="?textRegular" />
-            </LinearLayout>
-
-        </LinearLayout>
+        android:layout_above="@+id/start_toggle"
+        android:layout_gravity="center"
+        android:layout_alignParentLeft="false">
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
 
             android:divider="@android:color/transparent"
             android:dividerHeight="@dimen/activity_horizontal_margin"
 
-            android:id="@+id/relative"
-            android:layout_gravity="center">
+            android:id="@+id/relative">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="4"
+                android:id="@+id/linearLayout2"
+                android:baselineAligned="false"
+                android:layout_gravity="center"
+                android:layout_above="@+id/circularSeekBar2"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="bottom">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:layout_marginRight="4dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        android:text="@string/end_time"
+                        android:id="@+id/end_time"
+                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        android:layout_above="@+id/current_time"
+                        android:layout_toLeftOf="@+id/current_time"
+                        android:layout_gravity="right"
+                        style= "?textTitle"
+                        android:layout_marginBottom="1dp"
+                        android:gravity="right" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Thursday"
+                        android:id="@+id/TXT_FUTURE"
+                        android:singleLine="false"
+                        android:layout_gravity="right"
+                        android:gravity="right"
+                        android:textSize="14sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:gravity="right">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="22:"
+                            android:id="@+id/dynamicHour"
+                            android:textSize="14sp"
+                            android:layout_above="@+id/seekVal"
+                            android:layout_toRightOf="@+id/clock_linear"
+                            style="?textRegular" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="00"
+                            android:id="@+id/endclock_text"
+                            android:textSize="14sp"
+                            android:layout_gravity="center_horizontal"
+                            style="?textRegular" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:id="@+id/linearLayout3"
+                    android:layout_marginLeft="4dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/current_time"
+                        android:id="@+id/current_time"
+                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        android:layout_alignTop="@+id/circularSeekBar2"
+                        android:layout_alignRight="@+id/circularSeekBar2"
+                        android:layout_alignEnd="@+id/circularSeekBar2"
+                        style="?textTitle"
+                        android:layout_marginBottom="1dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Wednesday"
+                        android:id="@+id/TXT_TODAY"
+                        android:editable="false" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="21:00"
+                        android:id="@+id/clock_text"
+                        android:textSize="14sp"
+                        android:layout_below="@+id/current_time"
+                        android:layout_toRightOf="@+id/end_time"
+                       style="?textRegular" />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -173,14 +179,15 @@
             <com.devadvance.circularseekbar.CircularSeekBar
                 android:id="@+id/circularSeekBar2"
                 android:layout_width="fill_parent"
-                android:layout_height="280dp"
+                android:layout_height="282dp"
                 style="?circleSeek"
                 app:max="23"
                 android:layout_alignParentTop="false"
                 android:layout_alignParentLeft="false"
                 android:layout_alignParentStart="false"
                 android:layout_alignParentBottom="false"
-                android:layout_centerInParent="true" />
+                android:layout_centerInParent="true"
+                android:paddingTop="20dp" />
 
         </RelativeLayout>
     </LinearLayout>
