--- a/app/src/main/res/layout/fragment_fasting_started.xml
+++ b/app/src/main/res/layout/fragment_fasting_started.xml
@@ -21,110 +21,117 @@
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/breakFast_button">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="2"
-            android:id="@+id/linearLayout2"
-            android:baselineAligned="false"
-            android:layout_gravity="center">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/linearLayout"
-                android:layout_weight="1"
-                android:layout_marginRight="4dp"
-                android:orientation="vertical"
-                android:gravity="right">
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="FINISH"
-                    android:id="@+id/end"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:gravity="right"
-                    android:textAppearance="?textTitle"
-                    android:layout_marginBottom="1dp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?textTitle"
-                    android:text="Friday"
-                    android:id="@+id/txt_end_day"
-                    android:gravity="right"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?textRegular"
-                    android:text="21:00"
-                    android:id="@+id/end_time"
-                    android:textSize="14sp"
-                    android:gravity="right" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/linearLayout4"
-                android:layout_weight="1"
-                android:layout_marginLeft="4dp"
-                android:gravity="left">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?textTitle"
-                    android:text="START"
-                    android:id="@+id/start"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:gravity="left"
-                    android:layout_marginBottom="1dp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?textTitle"
-                    android:text="Thursday"
-                    android:id="@+id/txt_start_day"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?textRegular"
-                    android:text="22:00"
-                    android:id="@+id/start_time"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_gravity="left"
-                    android:gravity="left"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-        </LinearLayout>
-
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/clock_relative"
 
             android:divider="@android:color/transparent"
             android:dividerHeight="@dimen/activity_horizontal_margin"
 
             android:layout_gravity="center">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:id="@+id/linearLayout2"
+                android:baselineAligned="false"
+                android:layout_gravity="center"
+                android:layout_above="@+id/holoCircularProgressBar1"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentTop="true"
+                android:gravity="bottom"
+                android:paddingBottom="5dp">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/linearLayout"
+                    android:layout_weight="1"
+                    android:layout_marginRight="4dp"
+                    android:orientation="vertical"
+                    android:gravity="right">
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="FINISH"
+                        android:id="@+id/end"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:gravity="right"
+                        android:textAppearance="?textTitle"
+                        android:layout_marginBottom="1dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?textTitle"
+                        android:text="Friday"
+                        android:id="@+id/txt_end_day"
+                        android:gravity="right"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?textRegular"
+                        android:text="21:00"
+                        android:id="@+id/end_time"
+                        android:textSize="14sp"
+                        android:gravity="right" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/linearLayout4"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="4dp"
+                    android:gravity="left">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?textTitle"
+                        android:text="START"
+                        android:id="@+id/start"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:gravity="left"
+                        android:layout_marginBottom="1dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?textTitle"
+                        android:text="Thursday"
+                        android:id="@+id/txt_start_day"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?textRegular"
+                        android:text="22:00"
+                        android:id="@+id/start_time"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="left"
+                        android:gravity="left"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
@@ -221,11 +228,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="272dp"
                 style="?circleProgress"
+                android:layout_gravity="center"
                 android:layout_centerVertical="true"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="8dp"
-                android:layout_alignParentTop="true" />
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
         </RelativeLayout>
 
