--- a/app/src/main/res/layout/fragment_fasting_length.xml
+++ b/app/src/main/res/layout/fragment_fasting_length.xml
@@ -206,7 +206,8 @@
         android:layout_alignRight="@+id/mainLinear"
         android:layout_alignEnd="@+id/mainLinear"
         android:layout_alignLeft="@+id/mainLinear"
-        android:layout_alignStart="@+id/mainLinear" />
+        android:layout_alignStart="@+id/mainLinear"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
