--- a/app/src/main/res/layout/fragment_reminder_settings.xml
+++ b/app/src/main/res/layout/fragment_reminder_settings.xml
@@ -25,4 +25,18 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="12dp"
         android:clickable="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/reminders_disabled"
+        android:id="@+id/text_reminders_disabled"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_centerInParent="true"
+        android:textSize="18sp"
+        android:gravity="center_horizontal" />
 </RelativeLayout>
