--- a/app/src/main/res/menu/fasting_tracker.xml
+++ b/app/src/main/res/menu/fasting_tracker.xml
@@ -1,8 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.avaygo.myfastingtracker.Activities.FastingTrackerActivity" >
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+
+    <item
+        android:id="@+id/myswitch"
+        android:title=""
+        android:showAsAction="always"
+        android:actionLayout="@layout/actionbar_switch_layout"
+        />
+
 </menu>
