--- a/app/src/main/res/layout/listview_reminder_day.xml
+++ b/app/src/main/res/layout/listview_reminder_day.xml
@@ -7,7 +7,7 @@
     android:id="@+id/relative1">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/card_background"
         android:id="@+id/relativeLayout"
