--- a/app/src/main/res/layout/dialogue_duration_picker.xml
+++ b/app/src/main/res/layout/dialogue_duration_picker.xml
@@ -1,122 +1,143 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:layout_width="270dp"
+    android:layout_width="@dimen/date_picker_component_width"
     android:layout_height="match_parent"
     tools:context="com.avaygo.myfastingtracker.Activities.DurationPickerDialogue"
     android:id="@+id/linearLayout"
     android:background="#f2f2f2"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_alignParentBottom="true"
-        android:background="#ffffff">
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="0dp">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="4dp">
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_alignParentBottom="true"
+            android:background="#ffffff">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="4dp"
+                android:id="@+id/linearLayout">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="14"
+                    android:id="@+id/text_picker_hour"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textSize="60dp"
+                    android:layout_marginRight="2dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text=":57"
+                    android:id="@+id/text_picker_minutes"
+                    android:textColor="@color/numbers_text_color"
+                    android:textSize="60dp" />
+
+            </LinearLayout>
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="14"
-                android:id="@+id/text_picker_hour"
-                android:textColor="@android:color/holo_blue_light"
-                android:textSize="60sp"
-                android:layout_marginRight="2dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text=":57"
-                android:id="@+id/text_picker_minutes"
-                android:textColor="@color/numbers_text_color"
-                android:textSize="60sp" />
-
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:text="MONDAY"
+                android:id="@+id/text_picker_day"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="4dp"
+                android:textColor="@color/numbers_text_color" />
         </LinearLayout>
 
-        <TextView
+        <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="MONDAY"
-            android:id="@+id/text_picker_day"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="4dp"
-            android:textColor="@color/numbers_text_color" />
+            android:layout_height="wrap_content">
+
+            <com.devadvance.circularseekbar.CircularSeekBar
+                android:id="@+id/circularSeekBar2"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                app:circle_fill="#ffffff"
+                app:max="23"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                style="@style/CircularSeekBar_light"
+
+                app:circle_progress_color="#ff33b5e5"
+                app:pointer_halo_color="#6e33b5e5"
+                app:pointer_color="#ff33b5e5"
+
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="18 Hours"
+                android:id="@+id/text_seek_value"
+                android:layout_centerVertical="true"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="40sp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:gravity="center" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/line_background"
+                android:id="@+id/view"
+                android:layout_below="@+id/circularSeekBar2"
+                android:layout_alignLeft="@+id/circularSeekBar2"
+                android:layout_alignStart="@+id/circularSeekBar2" />
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Done"
+                android:id="@+id/button_done"
+                android:background="#f2f2f2"
+                android:textColor="@color/done_text_color"
+                android:layout_below="@+id/view"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textSize="14sp" />
+
+
+
+        </RelativeLayout>
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <com.devadvance.circularseekbar.CircularSeekBar
-            android:id="@+id/circularSeekBar2"
-            android:layout_width="fill_parent"
-            android:layout_height="245dp"
-            app:circle_fill="#ffffff"
-            app:max="23"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            style="@style/CircularSeekBar_light"
-
-            app:circle_progress_color="#ff33b5e5"
-            app:pointer_halo_color="#6e33b5e5"
-            app:pointer_color="#ff33b5e5"
-
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="18 Hours"
-            android:id="@+id/text_seek_value"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="40sp" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@color/line_background"
-            android:id="@+id/view"
-            android:layout_below="@+id/circularSeekBar2"
-            android:layout_alignLeft="@+id/circularSeekBar2"
-            android:layout_alignStart="@+id/circularSeekBar2" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Done"
-            android:id="@+id/button_done"
-            android:background="#f2f2f2"
-            android:textColor="@color/done_text_color"
-            android:layout_below="@+id/view"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textSize="14sp" />
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
