--- a/app/src/main/res/layout/activity_reminder_setting.xml
+++ b/app/src/main/res/layout/activity_reminder_setting.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.avaygo.myfastingtracker.Activities.ReminderSettingActivity"
+    tools:context="com.avaygo.myfastingtracker.activities.ReminderSettingActivity"
     style="?pageBackground"
     android:id="@+id/relative">
 
