--- a/app/src/main/res/values/colours.xml
+++ b/app/src/main/res/values/colours.xml
@@ -14,6 +14,7 @@
     
     <color name="Belize_Hole">#2980b9</color>
     <color name="Peter_River">#3498db</color>
+    <color name="Peter_Dark">#ff2a669b</color>
     <color name="Light_Blue">#94bee5</color>
 
 
