--- a/app/src/main/res/values/colours.xml
+++ b/app/src/main/res/values/colours.xml
@@ -17,5 +17,7 @@
     <color name="Peter_Dark">#ff2a669b</color>
     <color name="Light_Blue">#94bee5</color>
 
+    <color name="Main_Text">#ff424242</color>
+
 
 </resources>
