Started on the calendar Log Material Themed
TODO
-Notification settings.
-Calendar log.

--- a/app/src/main/res/layout/listview_navigation_row.xml
+++ b/app/src/main/res/layout/listview_navigation_row.xml
@@ -17,10 +17,12 @@
         <ImageView
             android:id="@+id/imageViewIcon"
             android:src="@drawable/ic_launcher"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"/>
+            android:layout_alignParentLeft="true"
+            android:maxHeight="45dp"
+            android:maxWidth="45dp" />
 
         <TextView
             android:id="@+id/textViewName"
@@ -33,7 +35,7 @@
             android:textColor="@color/Main_Text"
             android:textSize="20sp"
             android:gravity="center_vertical"
-            android:layout_marginLeft="12dp" />
+            android:layout_marginLeft="24dp" />
     </LinearLayout>
 
 </RelativeLayout>
