--- a/app/src/main/res/drawable/date_selector.xml
+++ b/app/src/main/res/drawable/date_selector.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
 
     <item>
-
-        <shape android:shape="oval"
+        <shape
             android:bottom="0dp"
             android:left="5dp"
             android:right="5dp"
+            android:shape="ring"
+            android:thickness="0dp"
+            android:useLevel="false"
+
             android:top="0dp">
 
             <stroke
                 android:width="1dp"
                 android:color="@color/caldroid_darker_gray" />
-
             <solid android:color="#FFFFFFFF" />
+
+            <size
+                android:width="5dp"
+                android:height="5dp"/>
+
         </shape>
+
     </item>
 
 </layer-list>
