--- a/app/src/main/res/layout/fragment_log.xml
+++ b/app/src/main/res/layout/fragment_log.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="400dp"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent">
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,16 +13,38 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:id="@+id/relativeLayout2">
 
         <LinearLayout
             android:id="@+id/calendar1"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:layout_height="320dp"
             android:orientation="vertical"
             android:padding="12dp">
         </LinearLayout>
     </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_below="@+id/relativeLayout2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/Background_colour"
+        android:padding="16dp">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="6th March 2015"
+            android:id="@+id/text_date_title"
+            android:gravity="center_vertical"
+            android:textStyle="bold"
+            android:textColor="@color/Main_Text"
+            android:textSize="16sp" />
+    </LinearLayout>
 
 </RelativeLayout>
 
