--- a/app/src/main/res/layout/listview_reminder_day.xml
+++ b/app/src/main/res/layout/listview_reminder_day.xml
@@ -14,11 +14,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
 
         android:focusableInTouchMode="false"
-        android:minHeight="48dp">
+        android:minHeight="48dp"
+        android:paddingBottom="8dp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -37,23 +38,24 @@
                 android:baselineAligned="false"
                 android:measureWithLargestChild="false"
                 android:weightSum="2"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp">
+                android:layout_marginRight="8dp"
+                android:gravity="center">
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="Monday"
                     android:id="@+id/item_text_reminderday"
                     style="?textRegular"
-                    android:textSize="20dp"
+                    android:textSize="24sp"
                     android:autoText="false"
-                    android:gravity="center_vertical|left"
+                    android:gravity="left"
                     android:layout_weight="1"
                     android:singleLine="false"
                     android:focusableInTouchMode="false"
-                    android:textColor="@color/Peter_River" />
+                    android:textColor="@color/Light_Accent" />
 
                 <Switch
                     android:layout_width="match_parent"
@@ -69,10 +71,11 @@
             </LinearLayout>
             <View
                 style="?dividerStyle"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="1dp"
-                android:layout_marginBottom="16dp" />
+                android:layout_marginBottom="16dp"
+                android:background="#0c000000" />
 
 
         </LinearLayout>
@@ -82,11 +85,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/linearLayout3"
-            android:layout_alignTop="@+id/linearLayout4"
+            android:gravity="left"
+            android:layout_below="@+id/linearLayout"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="8dp"
-            android:gravity="bottom|left">
+            android:layout_marginLeft="8dp">
 
             <TextView
                 android:layout_width="fill_parent"
@@ -95,9 +98,9 @@
                 android:text="16"
                 android:id="@+id/item_text_fasting_duration"
                 android:textSize="14dp"
-                android:gravity="center_horizontal"
                 android:focusableInTouchMode="false"
-                android:textColor="@android:color/darker_gray" />
+                android:textColor="@android:color/darker_gray"
+                android:gravity="center" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -105,10 +108,10 @@
                 android:textAppearance="?textRegular"
                 android:text="Hours"
                 android:id="@+id/text_hours"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:focusableInTouchMode="false"
                 android:textColor="@color/transparent_black"
-                android:layout_marginBottom="8dp" />
+                android:gravity="center_vertical|bottom" />
         </LinearLayout>
 
         <LinearLayout
@@ -116,23 +119,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/linearLayout4"
-            android:gravity="bottom|right"
+            android:gravity="right"
             android:layout_below="@+id/linearLayout"
             android:layout_toRightOf="@+id/linearLayout3"
-            android:layout_alignRight="@+id/linearLayout"
-            android:layout_alignEnd="@+id/linearLayout"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginRight="8dp">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/linearLayout2">
+                android:id="@+id/linearLayout2"
+                android:gravity="right"
+                android:layout_marginBottom="2dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="From "
+                    android:text="From: "
                     style="?textRegular"
                     android:id="@+id/textView5"
                     android:textSize="14sp"
@@ -162,21 +167,21 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/linearLayout">
+                android:layout_height="match_parent"
+                android:id="@+id/linearLayout"
+                android:gravity="right">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Until "
+                    android:text="Until: "
                     android:id="@+id/textView7"
                     android:textSize="14sp"
                     android:singleLine="true"
                     android:autoText="false"
                     android:focusableInTouchMode="false"
                     android:textColor="@color/transparent_black"
-                    android:gravity="right"
-                    android:layout_marginBottom="8dp" />
+                    android:gravity="bottom|right" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -188,9 +193,8 @@
                     android:singleLine="true"
                     android:autoText="false"
                     android:focusableInTouchMode="false"
-                    android:gravity="right"
-                    android:textColor="@android:color/darker_gray"
-                    android:layout_marginBottom="8dp" />
+                    android:gravity="bottom|right"
+                    android:textColor="@android:color/darker_gray" />
             </LinearLayout>
 
         </LinearLayout>
