--- a/app/src/main/res/drawable/cell_bg.xml
+++ b/app/src/main/res/drawable/cell_bg.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item>
         <shape
             android:bottom="0dp"
@@ -8,16 +9,15 @@
             android:top="0dp"
             android:shape="ring"
             android:thickness="0dp"
-
             android:useLevel="false">
             <stroke
                 android:width="1dp"
-                android:color="@color/caldroid_darker_gray" />
+                android:color="#ffffff" />
             <solid android:color="#FFFFFFFF" />
 
             <size
-                android:width="5dp"
-                android:height="5dp"/>
+                android:width="2dp"
+                android:height="2dp"/>
         </shape>
 
     </item>
