--- a/app/src/main/res/layout/activity_fasting_tracker.xml
+++ b/app/src/main/res/layout/activity_fasting_tracker.xml
@@ -4,7 +4,7 @@
     android:id = "@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.avaygo.myfastingtracker.activities.MainActivity"
+    tools:context="com.avaygo.myfastingtracker.Activities.MainActivity"
     android:clickable="false"
     style="?pageBackground">
 
