Started on the calendar Log Trying Material Themed
TODO
-Notification settings.
-Calendar log.

--- a/app/src/main/res/layout/activity_reminder_setting.xml
+++ b/app/src/main/res/layout/activity_reminder_setting.xml
@@ -67,7 +67,7 @@
                     android:layout_height="match_parent"
                     android:id="@+id/textView"
                     android:text="Start: "
-                    android:textSize="14dp"
+                    android:textSize="14sp"
                     android:gravity="center_vertical|right"
                     android:textColor="@color/transparent_black"
                     android:focusableInTouchMode="false"
@@ -122,7 +122,7 @@
                     android:layout_height="match_parent"
                     android:text="18 Hours"
                     android:id="@+id/text_duration"
-                    android:textSize="14dp"
+                    android:textSize="14sp"
                     android:gravity="center_vertical"
                     android:textColor="@android:color/darker_gray"
                     android:layout_weight="1" />
@@ -151,7 +151,7 @@
                     android:layout_height="match_parent"
                     android:text="End: "
                     android:id="@+id/textView3"
-                    android:textSize="14dp"
+                    android:textSize="14sp"
                     android:layout_marginLeft="8dp"
                     android:gravity="center|right"
                     android:textColor="@color/transparent_black"
